--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Description: Core functions and data for calculating environmental footprints
     classifications, and functions for tracing environmental impacts through 
     global supply chains.
 License: MIT + file LICENSE
+URL: https://eduaguilera.github.io/afsetools
+BugReports: https://github.com/eduaguilera/afsetools/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
