fix vector loading

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(get_herbwoody_fao)
 export(ggplotRegression)
 export(is_empty)
 export(load_general_data)
+export(load_vectors)
 export(scale_land)
 export(theme_new)
 export(theme_nolabel)
