--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,6 +18,7 @@ reference:
     Load coefficients, classifications, and foundational data objects.
   contents:
   - load_general_data
+  - load_vectors
 
 - title: NPP Calculation Functions
   desc: >
