Refactored NPP functions to use snake_case naming, updated exports, removed old Rd files, added new documentation, and improved test coverage.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,9 @@ export(Agg_primary)
 export(Agg_processed)
 export(Allocate_impacts_to_products)
 export(Arrange_dates)
-export(Calc_CropNPP_components)
-export(Calc_NPP_DM_C_N)
-export(Calc_NPP_potentials)
 export(Calc_N_fix)
 export(Calc_diets)
 export(Calc_impact_processed)
-export(Calculate_crop_NPP)
 export(Filling)
 export(FillingProxy)
 export(Gases_GWP)
@@ -19,8 +15,12 @@ export(Prepare_prim)
 export(add_xlsx_sheet)
 export(calc_avail_fp_dtm)
 export(calc_avail_fp_gt)
+export(calculate_crop_npp)
+export(calculate_crop_npp_components)
 export(calculate_footprints)
 export(calculate_land_scaling)
+export(calculate_npp_dm_c_n)
+export(calculate_npp_potentials)
 export(drop_cols)
 export(extract_luh2)
 export(fill_na_with_sum)
