fix NPP functions and add biomass functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,16 +20,19 @@ export(calculate_crop_npp_components)
 export(calculate_footprints)
 export(calculate_land_scaling)
 export(calculate_npp_dm_c_n)
-export(calculate_npp_potentials)
+export(calculate_potential_npp)
 export(drop_cols)
 export(extract_luh2)
 export(fill_na_with_sum)
 export(get_global_export_footprint)
 export(get_herbwoody_fao)
 export(ggplotRegression)
+export(integrate_fallow)
 export(is_empty)
 export(load_general_data)
 export(load_vectors)
+export(residue_use)
+export(residues_as_items)
 export(scale_land)
 export(theme_new)
 export(theme_nolabel)
