--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(Filling)
 export(FillingProxy)
 export(Gases_GWP)
 export(Prepare_prim)
+export(redistribute_feed)
 export(add_xlsx_sheet)
 export(calc_avail_fp_dtm)
 export(calc_avail_fp_gt)
