Audit fixes for redistribute_feed()
- Rewrite roxygen2 docs (<=80 char lines, accurate @return, @param verbose)
- Add verbose parameter to suppress cat() output
- Remove dead code: fixed_mode_vec, fixed_mode, Ruminant, reduced_rows
- Remove Zoot_fixed from catfeed_priority
- Improve Monogastric fallback (try extdata before hardcoded vector)
- Fix dplyr::pull(total, 1) -> dplyr::pull(total)
- Fix allocate_trade() NA comparison bug
- Fix distribute_surplus() stale weight refresh
- Fix original_Province column collision in allocate_cartesian/grouped
- Add Feed Distribution Functions section to _pkgdown.yml
- Add test-feed_distribution_functions.R (18 tests)

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -60,6 +60,12 @@ reference:
   - calculate_footprints
   - extract_luh2
 
+- title: Feed Distribution Functions
+  desc: >
+    Livestock feed demand redistribution and allocation.
+  contents:
+  - redistribute_feed
+
 - title: Biomass Processing Functions
   desc: >
     Functions for biomass data processing including fallow integration and residue handling.
