Fix cross-repo dependencies, code audit fixes, and expand README
- Export filter_areas() (used by Global repo without prefix)
- Add backward-compatible aliases: Calculate_crop_NPP, Calc_CropNPP_components,
  Calc_NPP_potentials, Calc_NPP_DM_C_N (used by Global and Spain_Hist)
- Fix implicit left_join 'by' warnings in biomass_functions.R
- Replace deprecated gather/aes_string/ifelse with modern equivalents
- Add select(-Proxy_ratio, -Source_Proxy_ratio) cleanup in FillingProxy
- Add zoo to Imports; methods, raster, sf to Suggests
- Expand README: architecture diagram, function tables with aliases,
  related repos (Global + Spain_Hist), dependencies section
- Update _pkgdown.yml reference index

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,12 @@ Imports:
     readxl,
     openxlsx,
     tibble,
-    tidyr
+    tidyr,
+    zoo
 Suggests:
+    methods,
+    raster,
+    sf,
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
