--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,13 @@ export(Agg_primary)
 export(Agg_processed)
 export(Allocate_impacts_to_products)
 export(Arrange_dates)
+export(Calc_CropNPP_components)
+export(Calc_NPP_DM_C_N)
+export(Calc_NPP_potentials)
 export(Calc_N_fix)
 export(Calc_diets)
 export(Calc_impact_processed)
+export(Calculate_crop_NPP)
 export(Filling)
 export(FillingProxy)
 export(Gases_GWP)
@@ -24,6 +28,7 @@ export(calculate_potential_npp)
 export(drop_cols)
 export(extract_luh2)
 export(fill_na_with_sum)
+export(filter_areas)
 export(get_global_export_footprint)
 export(get_herbwoody_fao)
 export(ggplotRegression)
@@ -37,3 +42,4 @@ export(residues_as_items)
 export(scale_land)
 export(theme_new)
 export(theme_nolabel)
+importFrom(rlang,.data)
