feat: BNF functions module with literature-based environmental modifiers\n\nNew R/bnf_functions.R (1257 lines) with 5 exported functions:\n- calc_crop_bnf(): symbiotic BNF for crop legumes (NPP + Anglade methods)\n- calc_weed_bnf(): symbiotic BNF for weeds/cover crops\n- calc_nonsymbiotic_bnf(): free-living/associative BNF with 6 env modifiers\n- calc_bnf(): master function combining all 3 BNF components\n- summarize_bnf(): diagnostics and reporting\n\n7 internal helper functions for environmental modifiers:\n- Differential N inhibition (synthetic vs organic N sources)\n- Gaussian temperature response (sigma=8 symb, sigma=10 non-symb)\n- Aridity-index water stress (threshold AI=0.65)\n- Michaelis-Menten SOM effect (k=2.0%, ref=2.5%)\n- Gaussian soil pH response (opt=6.8, sigma=1.5)\n- Michaelis-Menten clay texture effect (k=20%, ref=25%)\n- Input validation for all exported functions\n\nCalc_N_fix() in analysis_functions.R is now a thin wrapper for\nbackward compatibility.\n\n323 tests passing (124 BNF-specific). All parameters documented\nwith literature sources in additional_files/documentation/."

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,14 @@ export(Prepare_prim)
 export(add_xlsx_sheet)
 export(calc_avail_fp_dtm)
 export(calc_avail_fp_gt)
+export(calc_bnf)
+export(calc_crop_bnf)
+export(calc_nonsymbiotic_bnf)
+export(calc_weed_bnf)
 export(calculate_crop_npp)
 export(calculate_crop_npp_components)
+export(calculate_crop_residues)
+export(calculate_crop_roots)
 export(calculate_footprints)
 export(calculate_land_scaling)
 export(calculate_npp_dm_c_n)
@@ -37,6 +43,7 @@ export(redistribute_feed)
 export(residue_use)
 export(residues_as_items)
 export(scale_land)
+export(summarize_bnf)
 export(theme_new)
 export(theme_nolabel)
 importFrom(rlang,.data)
