Complete BNF helper data: mappings, docs, integrity tests\n\n- Expand Names_BNF from 29 to 38 rows (9 unmapped leguminous crops)\n- Fill NHI/BGN for Fodder other, Mixed swards, Meadows in BNF sheet\n- Add roxygen2 docs for Names_BNF and Pure_legs in R/data.R\n- Rewrite BNF docs to include kgNha and Source columns\n- Wire Pure_legs Cat_leg into summarize_bnf() output\n- Fix DATA_REFERENCE.md: correct GWP object names, remove Ndfa_ref\n- Add Names_BNF and Pure_legs to _pkgdown.yml\n- Add 8 data integrity test blocks (joins, ranges, dimensions)\n- All 360 tests passing"

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -116,6 +116,8 @@ reference:
   - Biomass_coefs
   - GWP
   - BNF
+  - Names_BNF
+  - Pure_legs
   - items_full
   - regions_full
   - IPCC_residue_coefs
