feat: crop-group-specific residue/root helper data
Major improvements to crop residue and root estimation data:

- Modern_variety_adoption: now crop-group-specific (8 regions x 8 crop
  groups x annual 1900-2020). Based on Evenson & Gollin (2003) Table 1
  for developing regions, agricultural history for developed regions.
  Annual interpolation from decadal source data at load time.

- HI_crop_ranges: new table with traditional vs modern HI values and
  HI_gap_factor per crop group. Wheat (1.88) has largest correction,
  Legumes (1.21) smallest.

- Crop_RS_N_response: new table with crop-specific root:shoot N
  sensitivity. Legumes (0.30) barely respond to soil N, cereals
  (1.00) respond fully.

- IPCC_crop_mapping: added crop_group column mapping 31 IPCC crops
  to 8 breeding-history groups.

Code changes:
- calculate_crop_residues(): joins on (region_HANPP, crop_group, Year)
  and computes HI_correction from Modern_share * HI_gap_factor
- calculate_crop_roots(): applies crop-specific RS_N_sensitivity
- load_general_data(): loads 82 objects, interpolates adoption to annual

387 tests passing (0 failures, 0 warnings).

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -124,6 +124,8 @@ reference:
   - IPCC_root_coefs
   - IPCC_crop_mapping
   - Modern_variety_adoption
+  - HI_crop_ranges
+  - Crop_RS_N_response
   - N_input_RS_adj
   - Irrigation_adj
   - NPP_model_coefs
